# openapi.yaml
@@ -24,6 +24,21 @@ paths:
               schema:
                 type: string
                 example: geeq-session-id=abcde12345; Path=/; HttpOnly
+  /auth/logout:
+    post:
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Common200Response"
+        '401':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Common401Response"
   /auth/me:
     get:
       responses:
